# Philosophers

./: CMakeList.txt  CMakeLists.txt  Makefile  alkash.cpp  buchlo.cpp  philo.cpp  philo.h  tasksheduler.cpp  test.cpp  timer.cpp  timer.h
hdrs/: alkash.h  buchlo.h  philo.h  taskplanner.h  timer.h
philo/: Makefile
philo/hdrs/: philo.h
philo/src/: actions.c  actions_II.c  bitlockoper.c  bitoperations.c  checker.c  checks.c  crtalkash.c  crtpolyana.c  crttimes.c  philo.c  prints.c  strtonum.c  taskplanner.c  timer.c
philo_bonus/: Makefile
philo_bonus/hdrs/: philo.h
philo_bonus/src/: actions.c  bitlockoper.c  bitoperations.c  checker.c  crtalkashi.c  crtpolyana.c  crtsemaphores.c  freefuncs.c  ft_atoi.c  ft_itoa.c  ft_strjoinfree.c  philo.c  prints.c  taskplanner.c  timer.c  tools.c
src/: actions.c  actions_II.c  alkash.cpp  bitlockoper.c  bitoperations.c  buchlo.cpp  checks.c  crtpolyana.c  philo.c  philo.cpp  prints.c  strtonum.c  taskplanner.c  taskplanner.cpp  tasksheduler.cpp  test.cpp  timer.c  timer.cpp
